# kubevirt-ui

./: .env.example  .gitignore  Makefile  README.md  docker-compose.e2e.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: health.py
backend/app/api/v1/: auth.py  bgp.py  cilium_policy.py  cluster.py  disks.py  egress_gateway.py  folders.py  hubble.py  metrics.py  namespaces.py  network.py  ovn_gateway.py  profile.py  projects.py  router.py  schedules.py  security_baseline.py  security_groups.py  storage.py  subnet_acls.py  templates.py  tenants.py  tenants_addons.py  tenants_capi.py  tenants_common.py  tenants_crud.py  tenants_vpc.py  users.py  velero_backups.py  vm_actions.py  vm_console.py  vm_disks.py  vm_network.py  vm_snapshots.py  vms.py  vpcs.py
backend/app/core/: __init__.py  allocators.py  auth.py  constants.py  errors.py  groups.py  k8s_client.py  kubevirt.py  lldap_client.py  naming.py  tenant_reconciler.py
backend/app/models/: __init__.py  bgp.py  cluster.py  egress_gateway.py  folder.py  namespace.py  network.py  ovn_gateway.py  project.py  storage.py  template.py  tenant.py  vm.py  vpc.py
backend/tests/: conftest.py  test_health.py  test_vms.py
container-disk/: Dockerfile
dex/: config.yaml
docs/: ARCHITECTURE.md  FOLDERS.md  RESOURCE_MAPPING.md  authentication.md  deployment.md  egress-gateway.md  websocket-api.md
e2e/: Dockerfile  dom-analysis.spec.ts  full-audit.spec.ts  full-flow.spec.ts  mobile-audit.spec.ts  (+8 more)
(+219 files in other folders)
